--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-payment8001</module>
+    <module>cloud-eureka-server7001</module>
   </modules>
   <packaging>pom</packaging>
 
