--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <module>cloud-eureka-server7002</module>
     <module>cloud-consumer-order80</module>
     <module>cloud-api-commons</module>
+    <module>cloud-consumerconsul-order80</module>
+    <module>cloud-providerconsul-payment8006</module>
+
 
   </modules>
   <packaging>pom</packaging>
